--- a/my-project/package.json
+++ b/my-project/package.json
@@ -12,7 +12,8 @@
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.7.1"
+    "react-icons": "^4.7.1",
+    "react-use": "^17.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
